--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+@media (max-width: 550px), (max-height: 750px) {
+
+    footer {
+        box-shadow: 0px 0px 5px gray;
+    }
+}
+
 ol {
     counter-reset: li;
 }
